--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngrx/store-devtools": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "ui-components": "file:../angular-storybook/dist/ui-components",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
